--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Testit6</title>
+    <title>Running App</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
 
   <body>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Running App</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="runners">Home</a></li>
+      <li><a href="/runners">Runners</a></li>
+      <li><a href="/races">Races</a></li>
+    </ul>
+  </div>
+  </nav>
+    
+    
     <%= yield %>
   </body>
 </html>
